@@ -86,22 +86,20 @@
                   <h6>H6 - Gray Title Component</h6>
 
                   <h4 class="title-4">Expandable Component</h4>
-                  <p>In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
-                    assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
-                  </p>
-                  <div class="js-read-more-wrapper hide">
-                    <p>1. In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
-                    assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
+                  <div class="expandable">
+                    <p>In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
+                      assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
                     </p>
-                    <p>2. In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
-                    assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
+                    <p>In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
+                      assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
                     </p>
-                    <p>3. In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
-                    assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
+                    <p>In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
+                      assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
                     </p>
-                  </div>
-                  <p class="text-right"><a href="#" title="readmore" class="js-readmore">...readmore <i class="fa fa-arrow-circle-down" aria-hidden="true"></i></a></p>
-                  <p class="text-right"><a href="#" title="readmore" class="js-close hide">...close <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a></p>
+                    <p>In August 2014, NCMEC was contacted by officers with Washington law enforcement seeking 
+                      assistance in locating a missing 17-year-old girl. The teenager had not been seen since leaving her family home in July, but she had phoned her home once to tell her family that she had married an “adult homeless male” and that the two had hitchhiked to Montana and were possibly going to the Dakotas.
+                    </p>
+                  </div>                  
                 </div>
               </div>
               <div class="col-md-4 hidden-sm hidden-xs">
@@ -167,6 +165,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="missingkids/js/plugin/readmore.min.js"></script>
     <script type="text/javascript" src="missingkids/js/expandable.js"></script>
   </body>
 </html>
